--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "dependencies": {
     "@rbxts/roact": "^1.3.0-ts.10",
+    "@rbxts/roact-rodux": "^0.1.2",
+    "@rbxts/rodux": "^1.1.0",
     "@rbxts/services": "^1.1.2",
+    "@rbxts/signal": "^1.0.2",
     "@rbxts/t": "^2.1.1",
     "io-serve": "^1.1.2"
   }
